==> zhangzhize/18_EXO_nRF54L15_NCS/src/SparkFun_BNO08x_Library.cpp <==
#include "SparkFun_BNO08x_Library.hpp"
#include <string.h>
#include <math.h>

bool BNO08x::begin(const struct i2c_dt_spec *i2c_dev, 
                      const struct gpio_dt_spec *int_dev, 
                      const struct gpio_dt_spec *rst_dev)
{
    _i2c_dev = i2c_dev;
    _int_dev = int_dev;
    _rst_dev = rst_dev;

    if (_rst_dev != NULL) {
        if (!device_is_ready(_rst_dev->port)) return false;
        gpio_pin_configure_dt(_rst_dev, GPIO_OUTPUT_INACTIVE); 
    }
    if (_int_dev != NULL) {
        if (!device_is_ready(_int_dev->port)) return false;
        gpio_pin_configure_dt(_int_dev, GPIO_INPUT);
    }

    if(_int_dev != NULL) hal_wait_for_int();

  	if (isConnected() == false) // Check for sensor by verifying ACK response
        return (false); 

    _HAL.open = i2chal_open;
    _HAL.close = i2chal_close;
    _HAL.read = i2chal_read;
    _HAL.write = i2chal_write;
    _HAL.getTimeUs = hal_getTimeUs;

    return _init();
}

static int i2chal_open(sh2_Hal_t *self) {
  // Serial.println("I2C HAL open");

    if(_int_dev != NULL) hal_wait_for_int();

    uint8_t softreset_pkt[] = {5, 0, 1, 0, 1};
    bool success = false;
    for (uint8_t attempts = 0; attempts < 5; attempts++) {
        if (i2c_write_dt(_i2c_dev, softreset_pkt, 5) == 0) {
        success = true;
        break;
        }
        k_msleep(30);
    }
    if (!success)
        return -1;
    k_msleep(300);
    return 0;
}

static int i2chal_read(sh2_Hal_t *self, uint8_t *pBuffer, unsigned len,
                       uint32_t *t_us) {
    if(_int_dev != NULL) {
        if (!hal_wait_for_int()) {
            return 0;
        }
    }

    uint8_t header[4];
    if (i2c_read_dt(_i2c_dev, header, 4) != 0) {
        return 0;
    }

    // Determine amount to read
    uint16_t packet_size = (uint16_t)header[0] | (uint16_t)header[1] << 8;
    // Unset the "continue" bit
    packet_size &= ~0x8000;

    if (packet_size > len) {
        // packet wouldn't fit in our buffer
        return 0;
    }

    if (_int_dev != NULL) {
        if (!hal_wait_for_int()) return 0;
    }

    if (i2c_read_dt(_i2c_dev, pBuffer, packet_size) != 0) {
        return 0;
    }

    return packet_size;
}

static int i2chal_write(sh2_Hal_t *self, uint8_t *pBuffer, unsigned len) {
    // if(_int_dev != NULL) {
    //     if (!hal_wait_for_int()) {
    //         return 0;
    //     }
    // }

    if (i2c_write_dt(_i2c_dev, pBuffer, len) != 0) {
        return 0;
    }

    return len;
}

static void hal_hardwareReset(void) {
    if (_rst_dev != NULL) {
        gpio_pin_set_dt(_rst_dev, 0); // 释放复位
        k_msleep(10);
        gpio_pin_set_dt(_rst_dev, 1); // 激活ACTIVE_LOW
        k_msleep(10);
        gpio_pin_set_dt(_rst_dev, 0); // 释放复位
        k_msleep(200);
    }
}

bool BNO08x::isConnected() {
    return (i2c_write_dt(_i2c_dev, NULL, 0) == 0);
}

static bool hal_wait_for_int(void) {
    if (_int_dev == NULL) return false;

    for (int i = 0; i < 500; i++) {
        if (gpio_pin_get_dt(_int_dev) == 1) {
            return true;
        }
        k_msleep(1);
    }
    hal_hardwareReset();

    return false;
}
